no tadas las particulas se agregan a las fuerzas en el iterador por alguna razón...

--- a/skeleton/game.vcxproj
+++ b/skeleton/game.vcxproj
@@ -255,6 +255,7 @@
   <ItemGroup>
     <ClCompile Include="callbacks.cpp" />
     <ClCompile Include="Firework.cpp" />
+    <ClCompile Include="ForceGenerator.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="RenderUtils.cpp" />
@@ -265,7 +266,9 @@
     <ClInclude Include="callbacks.hpp" />
     <ClInclude Include="core.hpp" />
     <ClInclude Include="Firework.h" />
+    <ClInclude Include="ForceGenerator.h" />
     <ClInclude Include="GaussianPartGen.h" />
+    <ClInclude Include="ParticleForceReg.h" />
     <ClInclude Include="UniformPartGen.h" />
     <ClInclude Include="ParticleGenerator.h" />
     <ClInclude Include="ParticleSystem.h" />
