--- a/skeleton/game.vcxproj
+++ b/skeleton/game.vcxproj
@@ -261,6 +261,8 @@
     <ClCompile Include="RenderUtils.cpp" />
     <ClCompile Include="Render\Camera.cpp" />
     <ClCompile Include="Render\Render.cpp" />
+    <ClCompile Include="RigidBodyGen.cpp" />
+    <ClCompile Include="WorldMngr.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="callbacks.hpp" />
@@ -269,6 +271,7 @@
     <ClInclude Include="ForceGenerator.h" />
     <ClInclude Include="GaussianPartGen.h" />
     <ClInclude Include="ParticleForceReg.h" />
+    <ClInclude Include="RigidBodyGen.h" />
     <ClInclude Include="UniformPartGen.h" />
     <ClInclude Include="ParticleGenerator.h" />
     <ClInclude Include="ParticleSystem.h" />
@@ -277,6 +280,7 @@
     <ClInclude Include="RenderUtils.hpp" />
     <ClInclude Include="Render\Camera.h" />
     <ClInclude Include="Render\Render.h" />
+    <ClInclude Include="WorldMngr.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
