--- a/skeleton/game.vcxproj.filters
+++ b/skeleton/game.vcxproj.filters
@@ -13,6 +13,8 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Firework.cpp" />
     <ClCompile Include="ForceGenerator.cpp" />
+    <ClCompile Include="WorldMngr.cpp" />
+    <ClCompile Include="RigidBodyGen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core.hpp" />
@@ -33,6 +35,8 @@
     <ClInclude Include="Firework.h" />
     <ClInclude Include="ForceGenerator.h" />
     <ClInclude Include="ParticleForceReg.h" />
+    <ClInclude Include="WorldMngr.h" />
+    <ClInclude Include="RigidBodyGen.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Render">
