--- a/skeleton/game.vcxproj.filters
+++ b/skeleton/game.vcxproj.filters
@@ -13,8 +13,10 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Firework.cpp" />
     <ClCompile Include="ForceGenerator.cpp" />
-    <ClCompile Include="WorldMngr.cpp" />
+    <ClCompile Include="WorldM.cpp" />
     <ClCompile Include="RigidBodyGen.cpp" />
+    <ClCompile Include="RigidBody.cpp" />
+    <ClCompile Include="RigidForceGen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core.hpp" />
@@ -35,8 +37,11 @@
     <ClInclude Include="Firework.h" />
     <ClInclude Include="ForceGenerator.h" />
     <ClInclude Include="ParticleForceReg.h" />
-    <ClInclude Include="WorldMngr.h" />
+    <ClInclude Include="WorldM.h" />
     <ClInclude Include="RigidBodyGen.h" />
+    <ClInclude Include="RigidForceReg.h" />
+    <ClInclude Include="RigidBody.h" />
+    <ClInclude Include="RigidForceGen.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Render">
